added fixes jv-stream-practice